--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Loay-adel portofolio React and MERN Stack Develoaper"
     />
+<script defer data-domain="loay-adel.netlify.app" src="https://plausible.io/js/script.js"></script>
     <title>Loay Adel</title>
   </head>
   <body>
