enhanced the SEO

--- a/index.html
+++ b/index.html
@@ -2,15 +2,67 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-main.webp" />
+    <link rel="icon" type="image/webp" href="/logo-main.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="max-age=31536000, immutable" />
+
+    <!-- Primary Meta Tags -->
+    <title>Loay Adel | Frontend & MERN Stack Developer</title>
     <meta
       name="description"
-      content="Loay-adel portofolio React and MERN Stack Develoaper"
+      content="Hi, I'm Loay Adel — a freelance Frontend & MERN Stack developer. I build fast, modern web apps using React, Next.js, Node.js, and MongoDB."
     />
-<script defer data-domain="loay-adel.netlify.app" src="https://plausible.io/js/script.js"></script>
-    <title>Loay Adel</title>
+    <meta name="author" content="Loay Adel" />
+    <meta
+      name="keywords"
+      content="Loay Adel, Frontend Developer, MERN Stack, React Developer, Next.js, JavaScript, Freelancer, Web Developer Portfolio"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://loay-adel.netlify.app/" />
+    <meta property="og:title" content="Loay Adel | Frontend & MERN Stack Developer" />
+    <meta
+      property="og:description"
+      content="Explore my portfolio — I design and develop modern, high-performance web apps using React, Next.js, Node.js, and MongoDB."
+    />
+    <meta property="og:image" content="https://loay-adel.netlify.app/og-image.webp" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://loay-adel.netlify.app/" />
+    <meta name="twitter:title" content="Loay Adel | Frontend & MERN Stack Developer" />
+    <meta
+      name="twitter:description"
+      content="Frontend & MERN Stack Developer building fast, modern web experiences."
+    />
+    <meta name="twitter:image" content="https://loay-adel.netlify.app/og-image.webp" />
+
+    <!-- Schema.org JSON-LD for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Loay Adel",
+        "url": "https://loay-adel.netlify.app",
+        "sameAs": [
+          "https://www.linkedin.com/in/loay-adel/",
+          "https://github.com/loay-adel"
+        ],
+        "jobTitle": "Frontend & MERN Stack Developer",
+        "description": "Freelance developer building modern, scalable web apps using React, Next.js, Node.js, and MongoDB."
+      }
+    </script>
+
+    <!-- Analytics -->
+    <script
+      defer
+      data-domain="loay-adel.netlify.app"
+      src="https://plausible.io/js/script.js"
+    ></script>
+
+    <!-- Preload fonts or main assets -->
+    <link rel="preload" as="image" href="/logo-main.webp" />
   </head>
   <body>
     <div id="root"></div>
