Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/webp" href="/logo-main.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="max-age=31536000, immutable" />
-
+  <meta name="google-site-verification" content="gecjoBalbmNj0e8o29gY31byVh3t3yOM0RjBUPL7uec" />
     <!-- Primary Meta Tags -->
     <title>Loay Adel | Frontend & MERN Stack Developer</title>
     <meta
