--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/logo-main.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="max-age=31536000, immutable" />
-  <meta name="google-site-verification" content="gecjoBalbmNj0e8o29gY31byVh3t3yOM0RjBUPL7uec" />
+    <meta
+      name="google-site-verification"
+      content="gecjoBalbmNj0e8o29gY31byVh3t3yOM0RjBUPL7uec"
+    />
+
+    <link rel="icon" type="image/webp" href="/logo-main.webp" />
+
     <!-- Primary Meta Tags -->
     <title>Loay Adel | Frontend & MERN Stack Developer</title>
     <meta
@@ -21,22 +26,34 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://loay-adel.netlify.app/" />
-    <meta property="og:title" content="Loay Adel | Frontend & MERN Stack Developer" />
+    <meta
+      property="og:title"
+      content="Loay Adel | Frontend & MERN Stack Developer"
+    />
     <meta
       property="og:description"
       content="Explore my portfolio — I design and develop modern, high-performance web apps using React, Next.js, Node.js, and MongoDB."
     />
-    <meta property="og:image" content="https://loay-adel.netlify.app/og-image.webp" />
+    <meta
+      property="og:image"
+      content="https://loay-adel.netlify.app/og-image.webp"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://loay-adel.netlify.app/" />
-    <meta name="twitter:title" content="Loay Adel | Frontend & MERN Stack Developer" />
+    <meta
+      name="twitter:title"
+      content="Loay Adel | Frontend & MERN Stack Developer"
+    />
     <meta
       name="twitter:description"
       content="Frontend & MERN Stack Developer building fast, modern web experiences."
     />
-    <meta name="twitter:image" content="https://loay-adel.netlify.app/og-image.webp" />
+    <meta
+      name="twitter:image"
+      content="https://loay-adel.netlify.app/og-image.webp"
+    />
 
     <!-- Schema.org JSON-LD for Google -->
     <script type="application/ld+json">
@@ -53,16 +70,6 @@
         "description": "Freelance developer building modern, scalable web apps using React, Next.js, Node.js, and MongoDB."
       }
     </script>
-
-    <!-- Analytics -->
-    <script
-      defer
-      data-domain="loay-adel.netlify.app"
-      src="https://plausible.io/js/script.js"
-    ></script>
-
-    <!-- Preload fonts or main assets -->
-    <link rel="preload" as="image" href="/logo-main.webp" />
   </head>
   <body>
     <div id="root"></div>
